--- a/app/index.html
+++ b/app/index.html
@@ -342,7 +342,7 @@
 				<h2>Наши проекты</h2>
 				<ul>
 					<li>
-						<a href="#">							
+						<a href="#" class="proj-link-img">							
 							<img src="img/proj1.jpg" alt="">
 							<span class="proj-title">
 								<span>Семейный</span>
@@ -360,8 +360,42 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">							
+						<a href="#" class="proj-link-img">							
 							<img src="img/proj2.jpg" alt="">
+							<span class="proj-title">
+								<span>Детская</span>
+								<span>студия</span>
+							</span>
+							<span class="proj-desc">
+								<p>Уникальный <br>
+									образовательный проект <br>
+									для всей семьи: <br>
+									Чудесный город профессий, <br>
+									3D театр, игропарк, <br>
+									сад-звуков, сад фактур...
+								</p>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="proj-link-img">							
+							<img src="img/proj3.jpg" alt="">
+							<span class="proj-title">
+								<span>Детская</span>
+								<span>студия</span>
+							</span>
+							<span class="proj-desc">
+								<p>Уникальный <br>
+									образовательный проект <br>
+									для всей семьи: <br>									
+									сад-звуков, сад фактур...
+								</p>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="proj-link-img">							
+							<img src="img/proj4.jpg" alt="">
 							<span class="proj-title">
 								<span>Детская</span>
 								<span>студия</span>
@@ -379,6 +413,42 @@
 					</li>
 				</ul>
 			</div><!--projects-->
+			<div class="cart">
+				<img src="img/cart.jpg" alt="">
+				<div class="cart-adress">
+					<p>
+						<b>Ждем вас</b>
+					</p>
+					<p>Московская область, 
+						Истринский район, 
+						ул. Невская, дом 727						
+						<span class="cart-phone">+7 (495) 122-00-02</span>
+					</p>
+				</div>
+			</div><!--cart-->
+			<div class="footer">
+				<div class="button-copy">
+					<button class="button-ord">записаться в школу</button>
+					<div class="copy">
+						<p>Начальная школа Wunderpark. <br>
+							Все права защищены.
+						</p>
+					</div>
+				</div>
+				<div class="phone-email-links">
+					<div class="foot-phone">
+						+7 (495) 122-00-02
+					</div>	
+					<div class="foot-mail">
+						<a href="#">
+							Email: welcome@wunderpark.ru
+						</a>
+					</div>
+					<div class="foot-links">
+						Как нас найти?   |  Карта сайта
+					</div>
+				</div>
+			</div>
 		</div><!--mobile-content-->
 	</div><!--wrapper-->
 </body>
