--- a/app/index.html
+++ b/app/index.html
@@ -428,7 +428,7 @@
 			</div><!--cart-->
 			<div class="footer">
 				<div class="button-copy">
-					<button class="button-ord">записаться в школу</button>
+					<button class="foot-button">записаться в школу</button>
 					<div class="copy">
 						<p>Начальная школа Wunderpark. <br>
 							Все права защищены.
@@ -440,12 +440,15 @@
 						+7 (495) 122-00-02
 					</div>	
 					<div class="foot-mail">
-						<a href="#">
+						<a href="mailto:welcome@wunderpark.ru">
 							Email: welcome@wunderpark.ru
 						</a>
 					</div>
 					<div class="foot-links">
-						Как нас найти?   |  Карта сайта
+						<ul>
+							<li><a href="#">Как нас найти?</a></li>
+							<li><a href="#">Карта сайта</a></li>
+						</ul>						   
 					</div>
 				</div>
 			</div>
