--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
 			</div><!--top-banner-->
 			<div class="about">
 				<div class="about-text">
-					<h2>WUNDERPARK – МЕЖДУНАРОДНАЯ ЧАСТНАЯ НАЧАЛЬНАЯ ШКОЛА</h2>
+					<h2>WUNDERPARK – МЕЖДУНАРОДНАЯ <br> ЧАСТНАЯ НАЧАЛЬНАЯ ШКОЛА</h2>
 					<p>Недалеко от Москвы, в живописном, экологически чистом районе на 23 километре от МКАД по Новорижскому шоссе находится частная начальная школа Wunderpark. Wunderpark — это не просто учебное заведение, это уникальная среда для обучения и развития детей по двум программам обучения: России и Великобритании.
 					</p>
 					<p> Не упустите возможность дать своим детям классическое образование в лучших традициях частных школ Великобритании!
@@ -112,7 +112,7 @@
 						<div><img src="img/logo2.png" alt=""></div>
 						<div>
 							<ul>							
-								<li>Международное образование	подтверждено сертификатами(экзамены KET/PET/SAT)</li>
+								<li>Международное образование	подтверждено сертификатами(KET/PET/SAT)</li>
 								<li>Ежегодные тесты по российской образовательной программе</li>
 								<li>Олимпиады</li>
 								<li>Конкурсы</li>
