--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
 						<div>
 							<ul>							
 								<li>Международное образование	подтверждено сертификатами(KET/PET/SAT)</li>
-								<li>Ежегодные тесты по российской образовательной программе</li>
+								<li>Ежегодные тесты по российской программе</li>
 								<li>Олимпиады</li>
 								<li>Конкурсы</li>
 								<li>Рекомендации в международные школы</li>
