--- a/app/index.html
+++ b/app/index.html
@@ -166,7 +166,11 @@
 								</div>
 							</div>
 						</li>
-					</ul>				
+					</ul>	
+					<div class="arr">
+						<a href="#" class="arr-l"></a>
+						<a href="#" class="arr-r"></a>
+					</div>			
 				</div><!--slider1-->	
 			</div><!--educators-->		
 			<div class="dop-obr">
@@ -193,7 +197,11 @@
 								<div class="dol">Балет</div>
 							</div>
 						</li>
-					</ul>				
+					</ul>
+					<div class="arr">
+						<a href="#" class="arr-l"></a>
+						<a href="#" class="arr-r"></a>
+					</div>			
 				</div>
 			</div><!--dop-obr-->
 			<div class="about dreams">
@@ -287,7 +295,7 @@
 							<span class="events-date">14.10.2016</span>
 						</div>
 						<div class="events-text">
-							<a class="events-title" href="#">ПЕРВОЕ СЕНТЯБРЯ В ШКОЛЕ WUNDERPARK</a>
+							<a class="events-title" href="#">ПЕРВОЕ СЕНТЯБРЯ</a>
 							<div class="events-desc">
 								<p>Наступил новый 2016-2017 учебный год! 
 									Этот год в Wunderpark пройдет под девизом 
@@ -353,8 +361,8 @@
 									образовательный проект <br>
 									для всей семьи: <br>
 									Чудесный город профессий, <br>
-									3D театр, игропарк, <br>
-									сад-звуков, сад фактур...
+									3D театр, игропарк,
+									
 								</p>
 							</span>
 						</a>
@@ -371,8 +379,7 @@
 									образовательный проект <br>
 									для всей семьи: <br>
 									Чудесный город профессий, <br>
-									3D театр, игропарк, <br>
-									сад-звуков, сад фактур...
+									3D театр, игропарк,
 								</p>
 							</span>
 						</a>
@@ -387,8 +394,7 @@
 							<span class="proj-desc">
 								<p>Уникальный <br>
 									образовательный проект <br>
-									для всей семьи: <br>									
-									сад-звуков, сад фактур...
+									для всей семьи: 
 								</p>
 							</span>
 						</a>
@@ -405,8 +411,7 @@
 									образовательный проект <br>
 									для всей семьи: <br>
 									Чудесный город профессий, <br>
-									3D театр, игропарк, <br>
-									сад-звуков, сад фактур...
+									3D театр, игропарк
 								</p>
 							</span>
 						</a>
